# 6502-CPU-Emulation

./: .gitignore  CMakeLists.txt
include/: constants.h  cpu.h  memory.h  opcodes.h
src/: CMakeLists.txt  cpu.cpp  main.cpp  memory.cpp
tests/: CMakeLists.txt  cputest.h  general_test.cpp  jsr_test.cpp  lda_test.cpp
